@@ -26,6 +26,8 @@
           (thanks to george js).
 - TW-1820 Install with -DLANGUAGE=2 flag not work.
           (thanks to E. Manuel Cerr'on Angeles)
+- TW-1855 "Well-known" CA certificates not properly auto-loaded
+          (thanks to Flavio Poletti).
 - TW-1857 Change Task::get call to the more efficient Task::has
           (thanks to Zachary Manning).
 - TW-1873 Specify different path to extensions/hooks directory
